# esp8266-pir-mqtt

./: .clang-format  CMakeLists.txt  platformio.ini
doc/: states.uml
src/: components.cpp  components.h  globals.cpp  globals.h  logging.cpp  logging.h  main.cpp  mqtt.cpp  mqtt.h  ota.cpp  ota.h  states.cpp  states.h
test/: CMakeLists.txt  timing.cpp
test/mock/: Arduino.cpp  Arduino.h  CMakeLists.txt  mock.cpp  mock.h
